--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,12 @@ code {
 }
 
 .home {
-  /* background: linear-gradient(
+  background: linear-gradient(
     0deg,
     rgb(255, 255, 0, 0.65) 0%,
     rgb(0, 0, 255, 0.65) 100%
-  ); */
-  background-image: url('../assets/background.webp');
+  );
+  /* background-image: url('../assets/background.webp'); */
   background-size: cover;
   min-height: 100vh;
 }
