--- a/src/index.css
+++ b/src/index.css
@@ -19,28 +19,32 @@ code {
 }
 
 .home {
-  background: linear-gradient(
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* background: linear-gradient(
     0deg,
-    rgb(255, 255, 0, 0.65) 0%,
-    rgb(0, 0, 255, 0.65) 100%
-  );
-  /* background-image: url('../assets/background.webp'); */
+    rgb(255, 255, 0, 0.5) 0%,
+    rgb(0, 0, 255, 0.5) 100%
+  ); */
+  background-image: url('../assets/background.webp');
   background-size: cover;
   min-height: 100vh;
 }
 .app {
   background: linear-gradient(
-    0deg,
-    rgba(249, 252, 234, 0.5) 0%,
-    rgba(76, 0, 255, 0.2) 50%
+    25deg,
+    rgba(255, 255, 255, 0.85) 0%,
+
+    rgba(80, 29, 2, 0.3) 50%
   );
 }
 
 .app.warm {
   background: linear-gradient(
-    0deg,
-    rgba(249, 252, 234, 0.5) 0%,
-    rgba(255, 230, 0, 0.5) 50%
+    25deg,
+    rgba(255, 255, 255, 0.85) 0%,
+    rgba(80, 29, 2, 0.3) 50%
   );
 }
 
@@ -52,79 +56,4 @@ main {
     rgba(0, 0, 0, 0.75)
   );
   padding: 25px;
-}
-
-.search-box {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.search-box .search-bar {
-  display: block;
-  width: 100%;
-  padding: 15px;
-
-  appearance: none;
-  background: none;
-  border: none;
-  outline: none;
-
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 0px 0px 16px 16px;
-  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-
-  color: #313131;
-  font-size: 20px;
-
-  transition: 0.4s ease;
-}
-
-.search-box .search-bar:focus {
-  background-color: rgba(255, 255, 255, 0.75);
-}
-
-.location-box .location {
-  color: #fff;
-  font-size: 32px;
-  font-weight: 500;
-  text-align: center;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
-}
-
-.location-box .date {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 300;
-  font-style: italic;
-  text-align: center;
-  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
-}
-
-.weather-box {
-  text-align: center;
-}
-
-.weather-box .temp {
-  position: relative;
-  display: inline-block;
-  margin: 30px auto;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 16px;
-
-  padding: 15px 25px;
-
-  color: #fff;
-  font-size: 102px;
-  font-weight: 900;
-
-  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
-  text-align: center;
-  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
-}
-
-.weather-box .weather {
-  color: #fff;
-  font-size: 48px;
-  font-weight: 700;
-  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
