--- a/src/index.css
+++ b/src/index.css
@@ -1,59 +1,63 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Roboto", sans-serif;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 .home {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  /* background: linear-gradient(
-    0deg,
-    rgb(255, 255, 0, 0.5) 0%,
-    rgb(0, 0, 255, 0.5) 100%
-  ); */
-  background-image: url('../assets/background.webp');
-  background-size: cover;
-  min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	background-image: url("../assets/background.webp");
+	background-size: cover;
+	min-height: 100vh;
 }
 .app {
-  background: linear-gradient(
-    25deg,
-    rgba(255, 255, 255, 0.85) 0%,
+	background: linear-gradient(
+		0deg,
+		rgba(255, 255, 255, 0.85) 0%,
 
-    rgba(80, 29, 2, 0.3) 50%
-  );
+		rgba(77, 3, 250, 0.2) 50%
+	);
 }
 
 .app.warm {
-  background: linear-gradient(
-    25deg,
-    rgba(255, 255, 255, 0.85) 0%,
-    rgba(80, 29, 2, 0.3) 50%
-  );
+	background: linear-gradient(
+		0deg,
+		rgba(255, 255, 255, 0.95) 0%,
+		rgba(241, 254, 0, 0.53) 50%
+	);
 }
 
 main {
-  min-height: 100vh;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.75)
-  );
-  padding: 25px;
+	min-height: 100vh;
+	background-image: linear-gradient(
+		to bottom,
+		rgba(0, 0, 0, 0.2),
+		rgba(0, 0, 0, 0.75)
+	);
+	padding: 25px;
+}
+ul,
+ol {
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
 }
